--- a/html/control.html
+++ b/html/control.html
@@ -66,10 +66,16 @@
 		</script>
 	</head>
 	<body>
-		<p align="center" id="server-name"><b>Primary/Secondary Server - Location</b></p>
-		<div style="text-align: center" class="padded">
-			<a href="/stat" target="_blank">Stats</a> ||| <a href="/recording" target="_blank">Recordings</a> |||
-			<a href="/settings.html" target="_blank">Settings</a> ||| <a href="/config.php?proclist" target="_blank">Processes</a><br />
+		<section class="hero-section">
+			<nav>
+				<ul>
+					<li><a href="/stat" target="_blank">Stats</a></li>
+					<li><a href="/recording" target="_blank">Recordings</a></li>
+					<li><a href="/settings.html" target="_blank">Settings</a></li>
+					<li><a href="/config.php?proclist" target="_blank">Processes</a></li>
+				</ul>
+			</nav>
+			<h1 id="server-name">Primary/Secondary Server - Location</h1>
 			<p id="serverdetails">Test</p>
 			<script>
 				var address = window.location.hostname;
@@ -79,7 +85,9 @@
 				backupaddress = rtmp.concat(address, '/backup/stream1 or stream2 or stream 3 etc.');
 				document.getElementById('serverdetails').innerHTML = fulladdress + '<br/>' + backupaddress;
 			</script>
-		</div>
+		</section>
+
+		<div style="text-align: center" class="padded"></div>
 
 		<div style="text-align: center" class="padded">
 			<form method="post" target="_blank" action="/config.php?remap">
