ui improvements & refactoring

--- a/html/control.html
+++ b/html/control.html
@@ -66,13 +66,18 @@
 		</script>
 	</head>
 	<body>
+		<div class="response-box" id="responseBox">
+			<!-- AJAX responses will appear here -->
+		</div>
+
 		<section class="hero-section">
 			<nav>
 				<ul>
-					<li><a href="/stat" target="_blank">Stats</a></li>
-					<li><a href="/recording" target="_blank">Recordings</a></li>
-					<li><a href="/settings.html" target="_blank">Settings</a></li>
-					<li><a href="/config.php?proclist" target="_blank">Processes</a></li>
+					<li><a href="/control.html">Control</a></li>
+					<li><a href="/settings.html">Settings</a></li>
+					<li><a href="/stat">Stats</a></li>
+					<li><a href="/recording">Recordings</a></li>
+					<li><a href="/config.php?proclist">Processes</a></li>
 				</ul>
 			</nav>
 			<h1 id="server-name">Primary/Secondary Server - Location</h1>
