--- a/html/control.html
+++ b/html/control.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Primary Server - Location</title>
+		<title>Control</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
@@ -25,7 +25,7 @@
 					<li><a href="/config.php?proclist">Processes</a></li>
 				</ul>
 			</nav>
-			<h1 id="server-name">Primary/Secondary Server - Location</h1>
+			<h1 id="server-name">Control</h1>
 			<p id="serverdetails">Test</p>
 			<script>
 				var address = window.location.hostname;
