--- a/html/settings.html
+++ b/html/settings.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>gp-main-nginx Settings</title>
+		<title>Settings</title>
 		<link href="https://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<script src="https://releases.flowplayer.org/js/flowplayer-3.2.12.min.js"></script>
