updating html to handle more outs & streams

--- a/html/settings.html
+++ b/html/settings.html
@@ -334,25 +334,12 @@
 
 		<div class="padded" style="max-width: 1000px">
 			<h2 style="margin: auto; text-align: center">Streams Name Table</h2>
-			<table style="margin: auto" id="name-table">
-				<thead>
-					<tr>
-						<th></th>
-						<th>Name</th>
-						<th>Out 1</th>
-						<th>Out 2</th>
-						<th>Out 3</th>
-						<th>Out 4</th>
-						<th>Out 5</th>
-						<th>Out 6</th>
-						<th>Out 7</th>
-						<th>Out 8</th>
-						<th>Out 9</th>
-						<th>Out 10</th>
-					</tr>
-				</thead>
-				<tbody id="name-table-body"></tbody>
-			</table>
+			<div class="table-wrapper">
+				<table style="margin: auto" id="name-table">
+					<thead></thead>
+					<tbody id="name-table-body"></tbody>
+				</table>
+			</div>
 
 			<button onclick="saveStreamNamesTable()" class="big-btn">Submit</button>
 
