Remove custom names for outs

--- a/html/control.html
+++ b/html/control.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Control</title>
@@ -30,7 +30,7 @@
 			<script>
 				var address = window.location.hostname;
 				document.getElementById('serverdetails').innerHTML = `
-					Send stream to rtmp://${address}/destribute/stream1
+					Send stream to rtmp://${address}/distribute/stream1
 						or stream2 or stream3 etc. <br/>
 					Send primary stream to rtmp://${address}/main/stream1
 						or stream2 or stream3 etc. <br/>
