finish control page tailwind update

--- a/html/control.html
+++ b/html/control.html
@@ -18,6 +18,7 @@
 			<div class="flex-none">
 				<ul class="menu menu-horizontal px-1">
 					<li><a href="/control.html">Control</a></li>
+					<li><a href="/settings.html">Settings</a></li>
 					<li>
 						<a href="/stat" target="_blank" t>Stats</a>
 					</li>
@@ -89,6 +90,10 @@
 
 		<section id="stream-controls" class="text-center"></section>
 
-		<div class="divider"></div>
+		<footer class="footer footer-center mt-10 bg-base-300 p-4 text-base-content">
+			<aside>
+				<p>Copyright © 2024 - All right reserved by MLS</p>
+			</aside>
+		</footer>
 	</body>
 </html>
