--- a/html/settings.html
+++ b/html/settings.html
@@ -1,135 +1,196 @@
 <!doctype html>
-<html>
+<html lang="en" data-theme="dim">
 	<head>
+		<meta charset="UTF-8" />
 		<title>Settings</title>
-		<link href="https://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="/css/style.css" />
-		<script src="https://releases.flowplayer.org/js/flowplayer-3.2.12.min.js"></script>
+		<link rel="icon" type="image/png" href="./img/isha-logo.png" />
+		<link rel="stylesheet" type="text/css" href="/css/output.css" />
 		<script type="text/javascript" src="/js/tools.js"></script>
 		<script type="text/javascript" src="/js/settings.js"></script>
+		<link href="https://vjs.zencdn.net/5.8.8/video-js.css" rel="stylesheet" />
+		<script src="https://releases.flowplayer.org/js/flowplayer-3.2.12.min.js"></script>
 	</head>
-	<body>
+	<body class="bg-base-100 text-base-content">
+		<div class="navbar bg-base-100">
+			<div class="flex-1">
+				<a class="btn btn-ghost text-xl" href="/control.html" id="server-name">MLS</a>
+			</div>
+			<div class="flex-none">
+				<ul class="menu menu-horizontal px-1">
+					<li><a href="/control.html">Control</a></li>
+					<li><a href="/settings.html">Settings</a></li>
+					<li>
+						<a href="/stat" target="_blank" t>Stats</a>
+					</li>
+					<li><a href="/recording" target="_blank">Recordings</a></li>
+					<li><a href="/config.php?proclist" target="_blank">Processes</a></li>
+				</ul>
+			</div>
+		</div>
 		<div class="response-box" id="responseBox">
 			<!-- AJAX responses will appear here -->
 		</div>
 
-		<section class="hero-section">
-			<nav>
-				<ul>
-					<li><a href="/control.html">Control</a></li>
-					<li><a href="/settings.html">Settings</a></li>
-					<li><a href="/stat">Stats</a></li>
-					<li><a href="/recording">Recordings</a></li>
-					<li><a href="/config.php?proclist">Processes</a></li>
-				</ul>
-			</nav>
-			<h1>Settings</h1>
-		</section>
+		<div class="max-w-3xl mx-auto prose">
+			<div tabindex="0" class="collapsible-header">
+				<div class="collapse-title">Stream Names</div>
+				<div class="collapse-content">
+					<p>You can assign names for the streams. This name will only have visual effect, and have no impact on the backend.</p>
+				</div>
+			</div>
+			<div class="overflow-x-auto">
+				<table class="table mb-0" id="name-table">
+					<thead></thead>
+					<tbody id="name-table-body"></tbody>
+				</table>
+			</div>
 
-		<div class="divider">
-			<img src="./img/red-divider.svg" alt="divider" />
-		</div>
+			<button onclick="saveStreamNamesTable()" class="btn btn-accent btn-sm my-2">Submit</button>
 
-		<div class="padded">
-			<h2>Add New Destination [ <a href="/config.php?destlist" target="_blank" style="">Destination List</a> ]</h2>
+			<div class="divider"></div>
+
+			<div tabindex="0" class="collapsible-header">
+				<div class="collapse-title text-xl font-medium">
+					Add New Destination [ <a href="/config.php?destlist" target="_blank" class="link link-accent">Destination List</a> ]
+				</div>
+				<div class="collapse-content">
+					<p>
+						The nginx server receives the feed and sends it to a multiple destinations, such as when streaming on the YouTube or Facebook.
+						You can use this interface to add such destination.
+						<br />
+						A few important points:
+					</p>
+					<ul>
+						<li>"Name" field should not contain any spaces. Please use underscores "_".</li>
+						<li>
+							If a login/password has to be added, enter the details in the format:
+							<br />
+							<code>
+								rtmp://server/streamkey-+-+flashver=FMLE/3.020(compatible;20FMSc/1.0)-+-+pubUser=login-+-+pubPasswd=password
+							</code>
+						</li>
+					</ul>
+				</div>
+			</div>
 			<form method="post" id="destinationForm">
-				Server URL:
-				<select id="server-url" onchange="updateRtmpUrl()">
-					<option value="">Custom</option>
-					<option value="rtmp://a.rtmp.youtube.com/live2/">YouTube</option>
-					<option value="rtmp://b.rtmp.youtube.com/live2?backup=1/">YouTube Backup</option>
-					<option value="rtmps://live-api-s.facebook.com:443/rtmp/">Facebook</option>
-				</select>
-				&nbsp; Stream Key (or Custom URL):
-				<input type="text" name="stream_key" size="41" placeholder="a5qb-dvjr-0v60-kx8t-90pj" id="stream-key" onchange="updateRtmpUrl()" />
+				<label class="input-label">
+					<div class="label pb-0">
+						<span class="label-text text-sm">Name</span>
+					</div>
+					<input
+						type="text"
+						name="name_id"
+						size="45"
+						placeholder="Sadhguru_English_YT"
+						class="input input-bordered input-neutral input-xs max-w-44" />
+				</label>
+
+				<label class="input-label">
+					<div class="label pb-0">
+						<span class="label-text text-sm">Server URL</span>
+					</div>
+					<select id="server-url" onchange="updateRtmpUrl()" class="select select-bordered select-xs max-w-xs">
+						<option selected value="">Custom</option>
+						<option value="rtmp://a.rtmp.youtube.com/live2/">YouTube</option>
+						<option value="rtmp://b.rtmp.youtube.com/live2?backup=1/">YT Backup</option>
+						<option value="rtmps://live-api-s.facebook.com:443/rtmp/">Facebook</option>
+					</select>
+				</label>
+				<label class="input-label">
+					<div class="label pb-0">
+						<span class="label-text text-sm">Stream Key (or Custom URL)</span>
+					</div>
+					<input
+						type="text"
+						name="stream_key"
+						size="41"
+						placeholder="a5qb-dvjr-0v60-kx8t-90pj"
+						id="stream-key"
+						onchange="updateRtmpUrl()"
+						class="input input-bordered input-neutral input-xs max-w-xs" />
+				</label>
+				<label class="input-label">
+					<div class="label pb-0">
+						<span class="label-text text-sm">Resolution</span>
+					</div>
+					<select name="resolution" class="labeled-select">
+						<option selected value="source">Source</option>
+						<option value="720p">720p</option>
+						<option value="540p">540p</option>
+						<option value="576p">PAL-720x576</option>
+					</select>
+				</label>
+
 				<br />
-				Full RTMP URL:
-				<input
-					type="text"
-					name="rtmp_url"
-					size="65"
-					placeholder="Generated as Server URL + Stream Key"
-					id="rtmp-url"
-					style="background-color: #fff7eb; border: 1px #bbb solid"
-					readonly />
+				<label class="input-label">
+					<div class="label pb-0">
+						<span class="label-text text-sm">Full RTMP URL</span>
+					</div>
+					<input
+						type="text"
+						name="rtmp_url"
+						size="65"
+						placeholder="Generated as Server URL + Stream Key"
+						id="rtmp-url"
+						class="input input-bordered input-neutral input-xs max-w-md"
+						disabled />
+				</label>
+
+				<label class="input-label">
+					<div class="label pb-0">
+						<span class="label-text text-sm">Stream Id</span>
+					</div>
+					<select name="stream_id" id="new-destination-stream" class="stream-selector labeled-select"></select>
+				</label>
+				<label class="input-label">
+					<div class="label pb-0">
+						<span class="label-text text-sm">Out Id</span>
+					</div>
+					<select name="output_id" id="out-selector" class="select select-bordered select-xs"></select>
+				</label>
 				<br />
-				Name: <input type="text" name="name_id" size="45" placeholder="Sadhguru_English_YT" />
-				&nbsp; Resolution:
-				<select name="resolution">
-					<option value="source">Source</option>
-					<option value="720p">720p</option>
-					<option value="540p">540p</option>
-					<option value="576p">PAL-720x576</option>
-				</select>
-				<br />
-				Stream Id:
-				<select name="stream_id" class="stream-selector" id="new-destination-stream"></select>
-				&nbsp; Output Id:
-				<select name="output_id" id="out-selector" style="min-width: 200px"></select>
 				<input
 					type="submit"
-					class="big-btn"
+					class="btn btn-accent btn-sm my-2"
 					value="Add Destination"
 					onclick="event.preventDefault(); submitFormAndShowResponse('destinationForm','config.php?destadd');" />
 			</form>
-			<details open>
-				<summary>Description</summary>
-				<p>
-					The nginx server receives the feed and sends it to a multiple destinations, such as when streaming on the YouTube or Facebook. You
-					can use this interface to add such destination.
-				</p>
-				<p>A few important points:</p>
-				<ul>
-					<li>"Name" field should not contain any spaces. Please use underscores "_".</li>
-					<li>
-						If a login/password has to be added, enter the details in the format:
-						<br />
-						<code> rtmp://server/streamkey-+-+flashver=FMLE/3.020(compatible;20FMSc/1.0)-+-+pubUser=login-+-+pubPasswd=password </code>
-					</li>
-				</ul>
-			</details>
-		</div>
 
-		<div class="divider">
-			<img src="./img/divider.svg" alt="divider" />
-		</div>
+			<div class="divider"></div>
 
-		<div class="padded">
-			<h2>Add Stream Config [ <a href="/config.php?streamlist" target="_blank" style="">Stream Configs List</a> ]</h2>
-			<form method="post" target="_blank" action="config.php?streamadd">
-				Stream Id:
-				<select name="stream_id" class="stream-selector"></select>
-				<br />
-				Config:
-				<select name="encodeparam">
-					<option value="audio">Audio</option>
-					<option value="none">None</option>
-					<option value="both">Audio & Video</option>
-				</select>
-				<br />
-				Resolution:
-				<select name="stream_res">
-					<option value="1080p">1080p</option>
-					<option value="720p">720p</option>
-					<option value="480p">480p</option>
-					<option value="576p">PAL-720x576</option></select
-				><br />
-				Failover:
-				<select name="failover_method">
-					<option value="nofailover">No Failover</option>
-					<option value="mainback">Main-Backup</option>
-					<option value="mainfail">Main-Failover</option>
-					<option value="mainbackfail">Main-Backup-Failover</option></select
-				><br />
-				<input type="submit" class="big-btn" value="Add Config" /> <br />
-			</form>
-		</div>
+			<div class="padded">
+				<h2>Add Stream Config [ <a href="/config.php?streamlist" target="_blank" style="">Stream Configs List</a> ]</h2>
+				<form method="post" target="_blank" action="config.php?streamadd">
+					Stream Id:
+					<select name="stream_id" class="stream-selector"></select>
+					<br />
+					Config:
+					<select name="encodeparam">
+						<option value="audio">Audio</option>
+						<option value="none">None</option>
+						<option value="both">Audio & Video</option>
+					</select>
+					<br />
+					Resolution:
+					<select name="stream_res">
+						<option value="1080p">1080p</option>
+						<option value="720p">720p</option>
+						<option value="480p">480p</option>
+						<option value="576p">PAL-720x576</option></select
+					><br />
+					Failover:
+					<select name="failover_method">
+						<option value="nofailover">No Failover</option>
+						<option value="mainback">Main-Backup</option>
+						<option value="mainfail">Main-Failover</option>
+						<option value="mainbackfail">Main-Backup-Failover</option></select
+					><br />
+					<input type="submit" class="btn btn-accent btn-sm my-2" value="Add Config" /> <br />
+				</form>
+			</div>
 
-		<div class="divider">
-			<img src="./img/divider.svg" alt="divider" />
-		</div>
+			<div class="divider"></div>
 
-		<div class="padded">
 			<h2>Add Audio Config [ <a href="/config.php?audiolist" target="_blank">Audio Configs List</a> ]</h2>
 			<form method="post" target="_blank" action="config.php?audioadd">
 				Stream Id:
@@ -205,147 +266,97 @@
 				<input type="submit" value="Load Preset" />
 			</form>
 
-			<p></p>
-		</div>
+			<div class="divider"></div>
 
-		<div class="divider">
-			<img src="./img/divider.svg" alt="divider" />
-		</div>
+			<div>
+				<h2>Add/Remove Schedule</h2>
+				<form method="post" target="_blank" action="/config.php?videoschedule">
+					<p>
+						<b>Schedule: </b><input type="text" name="hour" size="2" placeholder="HH" /><input
+							type="text"
+							name="minute"
+							size="2"
+							placeholder="MM" /><select name="stream_no" class="stream-selector"></select>
 
-		<div class="padded">
-			<h2>Instagram Authentication Test</h2>
-			<form method="post" target="_blank" action="config.php?instatestauth">
-				Stream Id:
-				<select name="insta_id" class="stream-selector"></select>
-				<input type="submit" value="Test Auth" /> <br />
-			</form>
-		</div>
-
-		<div class="divider">
-			<img src="./img/divider.svg" alt="divider" />
-		</div>
-
-		<div class="padded">
-			<h2>Instagram Login/Pass</h2>
-			<form method="post" target="_blank" action="config.php?instalogin">
-				Login: <input type="text" name="insta_login" size="15" placeholder="username" /> <br />
-				Password: <input type="text" name="insta_pass" size="15" placeholder="password" /> <br />
-				Stream Id:
-				<select name="insta_id" class="stream-selector"></select>
-				<br />
-				<input type="submit" value="Add login" /> <br />
-			</form>
-		</div>
-
-		<div class="divider">
-			<img src="./img/divider.svg" alt="divider" />
-		</div>
-
-		<div class="padded">
-			<h2>Add/Remove Schedule</h2>
-			<form method="post" target="_blank" action="/config.php?videoschedule">
-				<p>
-					<b>Schedule: </b><input type="text" name="hour" size="2" placeholder="HH" /><input
-						type="text"
-						name="minute"
-						size="2"
-						placeholder="MM" /><select name="stream_no" class="stream-selector"></select>
-
-					<select name="type_id">
-						<option value="">Choose</option>
-						<option value="holding">Holding</option>
-						<option value="video">Video</option>
-						<option value="out1">Output 1</option>
-						<option value="out2">Output 2</option>
-						<option value="out3">Output 3</option>
-						<option value="out4">Output 4</option>
-						<option value="out5">Output 5</option>
-						<option value="out6">Output 6</option>
-						<option value="out7">Output 7</option>
-						<option value="out8">Output 8</option>
-						<option value="out9">Output 9</option>
-						<option value="out10">Output 10</option>
-						<option value="out98">Record</option>
-						<option value="insta">Instagram</option></select
-					><select name="on_off">
-						<option value="">Choose</option>
-						<option value="on">On</option>
-						<option value="off">Off</option></select
-					><select name="schedule_type">
-						<option value="">Choose</option>
-						<option value="add">Add</option>
-						<option value="delete">Delete</option></select
-					><input type="text" name="startmin" size="1" value="0" /><input type="text" name="startsec" size="1" value="0" /><input
-						type="submit"
-						value="Schedule" />
-				</p>
-			</form>
-			<p><a href="/config.php?schedulelist" target="_blank">Schedule List</a></p>
-		</div>
-
-		<div class="divider">
-			<img src="./img/divider.svg" alt="divider" />
-		</div>
-
-		<div class="padded">
-			<h2>Upload Lowerthirds</h2>
-			<form method="post" target="_blank" action="config.php?uploadlower" enctype="multipart/form-data">
-				Select image to upload:
-				<input type="file" name="fileToUpload" id="fileToUpload" />
-				<input type="submit" value="Upload Image" name="submit" />
-			</form>
-		</div>
-
-		<div class="divider">
-			<img src="./img/divider.svg" alt="divider" />
-		</div>
-
-		<div class="padded">
-			<h2>Upload Holding Screens</h2>
-			<form method="post" target="_blank" action="config.php?uploadfile">
-				URL:
-				<input type="text" name="file_url" size="35" placeholder="https://www.dropbox.com/s/25xhzrtvom/filename.mp4?dl=0" /> <br />
-				Stream Id:
-				<select name="stream_no" class="stream-selector"></select>
-				<br />
-				Video Type:
-				<select name="type_id">
-					<option value="">Choose</option>
-					<option value="holding.mp4">Holding</option>
-					<option value="video.mp4">Video</option>
-					<option value="failover.mp4">Failover</option>
-					<option value="lowerthird.png">Lower 3rd</option>
-				</select>
-				<br />
-				<input type="submit" value="Upload File" /> <br />
-			</form>
-		</div>
-
-		<div class="divider">
-			<img src="./img/divider.svg" alt="divider" />
-		</div>
-
-		<div class="padded" style="max-width: 1000px">
-			<h2 style="margin: auto; text-align: center">Stream Names</h2>
-			<div class="table-wrapper">
-				<table style="margin: auto" id="name-table">
-					<thead></thead>
-					<tbody id="name-table-body"></tbody>
-				</table>
+						<select name="type_id">
+							<option value="">Choose</option>
+							<option value="holding">Holding</option>
+							<option value="video">Video</option>
+							<option value="out1">Output 1</option>
+							<option value="out2">Output 2</option>
+							<option value="out3">Output 3</option>
+							<option value="out4">Output 4</option>
+							<option value="out5">Output 5</option>
+							<option value="out6">Output 6</option>
+							<option value="out7">Output 7</option>
+							<option value="out8">Output 8</option>
+							<option value="out9">Output 9</option>
+							<option value="out10">Output 10</option>
+							<option value="out98">Record</option>
+							<option value="insta">Instagram</option></select
+						><select name="on_off">
+							<option value="">Choose</option>
+							<option value="on">On</option>
+							<option value="off">Off</option></select
+						><select name="schedule_type">
+							<option value="">Choose</option>
+							<option value="add">Add</option>
+							<option value="delete">Delete</option></select
+						><input type="text" name="startmin" size="1" value="0" /><input type="text" name="startsec" size="1" value="0" /><input
+							type="submit"
+							value="Schedule" />
+					</p>
+				</form>
+				<p><a href="/config.php?schedulelist" target="_blank">Schedule List</a></p>
 			</div>
 
-			<button onclick="saveStreamNamesTable()" class="big-btn">Submit</button>
+			<div class="divider">
+				<img src="./img/divider.svg" alt="divider" />
+			</div>
 
-			<details open>
-				<summary>Description</summary>
-				<p>You can assign names for the streams and outs. This name will only have visual effect, and have no impact on the backend.</p>
-			</details>
+			<div class="padded">
+				<h2>Upload Lowerthirds</h2>
+				<form method="post" target="_blank" action="config.php?uploadlower" enctype="multipart/form-data">
+					Select image to upload:
+					<input type="file" name="fileToUpload" id="fileToUpload" />
+					<input type="submit" value="Upload Image" name="submit" />
+				</form>
+			</div>
+
+			<div class="divider">
+				<img src="./img/divider.svg" alt="divider" />
+			</div>
+
+			<div class="padded">
+				<h2>Upload Holding Screens</h2>
+				<form method="post" target="_blank" action="config.php?uploadfile">
+					URL:
+					<input type="text" name="file_url" size="35" placeholder="https://www.dropbox.com/s/25xhzrtvom/filename.mp4?dl=0" /> <br />
+					Stream Id:
+					<select name="stream_no" class="stream-selector"></select>
+					<br />
+					Video Type:
+					<select name="type_id">
+						<option value="">Choose</option>
+						<option value="holding.mp4">Holding</option>
+						<option value="video.mp4">Video</option>
+						<option value="failover.mp4">Failover</option>
+						<option value="lowerthird.png">Lower 3rd</option>
+					</select>
+					<br />
+					<input type="submit" value="Upload File" /> <br />
+				</form>
+			</div>
+
+			<div class="divider">
+				<img src="./img/divider.svg" alt="divider" />
+			</div>
 		</div>
 
-		<div class="divider">
-			<img src="./img/red-divider.svg" alt="divider" />
-		</div>
-
-		<div style="height: 200px"></div>
+		<footer class="footer footer-center mt-10 bg-base-300 p-4 text-base-content">
+			<aside>
+				<p>Copyright © 2024 - All right reserved by MLS</p>
+			</aside>
+		</footer>
 	</body>
 </html>
