--- a/html/settings.html
+++ b/html/settings.html
@@ -145,7 +145,7 @@
             placeholder="Generated as Server URL + Stream Key"
             id="rtmp-url"
             class="input input-bordered input-neutral input-xs max-w-md"
-            disabled />
+            readonly />
         </label>
 
         <label class="input-label">
