add github navbar

--- a/html/control.html
+++ b/html/control.html
@@ -24,6 +24,7 @@
           </li>
           <li><a href="/recording" target="_blank">Recordings</a></li>
           <li><a href="/config.php?proclist" target="_blank">Processes</a></li>
+          <li><a href="https://github.com/AlexFreik/MLS" target="_blank">GitHub</a></li>
         </ul>
       </div>
     </div>
