--- a/html/settings.html
+++ b/html/settings.html
@@ -24,6 +24,7 @@
           </li>
           <li><a href="/recording" target="_blank">Recordings</a></li>
           <li><a href="/config.php?proclist" target="_blank">Processes</a></li>
+          <li><a href="https://github.com/AlexFreik/MLS" target="_blank">GitHub</a></li>
         </ul>
       </div>
     </div>
@@ -217,8 +218,8 @@
             <span class="label-text text-sm">Resolution</span>
           </div>
           <select name="stream_res" class="labeled-select">
-            <option selected value="vertical">Vertical</option>
-            <option value="1080p">1080p</option>
+            <!-- <option selected value="vertical">Vertical</option> -->
+            <option selected value="1080p">1080p</option>
             <option value="720p">720p</option>
             <option value="480p">480p</option>
             <option value="576p">PAL-720x576</option>
